--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   </head>
   <body>
 
-    <h1>
-      hello world
+    <h1 class="name">
+      hello
     </h1>
     <script src="index.js"></script>
   </body>
