--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
   <body>
 
     <h1 class="name">
-      hello
+      hello my 
     </h1>
+    <h2>name</h2>
     <script src="index.js"></script>
   </body>
 </html>
