--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
 
     <h1 class="name">
-      hello my 
+      hello my name is obed
     </h1>
     <h2>name</h2>
     <script src="index.js"></script>
