--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <body>
 
     <h1 class="name">
-      hello my name is obed
+      hello my name is obed.
+      I am a developer.
     </h1>
     <h2>name</h2>
     <script src="index.js"></script>
