--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h1 class="name">
       hello my name is obed.
       I am a developer.
+      sory I'm doing this.
     </h1>
     <h2>name</h2>
     <script src="index.js"></script>
