--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
       hello my name is obed.
       I am a developer.
       sory I'm doing this.
+      i don't have strength rn.
+      ill code in the morning
     </h1>
     <h2>name</h2>
     <script src="index.js"></script>
