--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       I am a developer.
       sory I'm doing this.
       i don't have strength rn.
-      ill code in the morning
+      i'll code in the morning
     </h1>
     <h2>name</h2>
     <script src="index.js"></script>
