--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       sory I'm doing this.
       i don't have strength rn.
       i'll code in the morning
+      i'm not with my laptop
     </h1>
     <h2>name</h2>
     <script src="index.js"></script>
