--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       still out of data 😭
       😭😭😭
       i don't know who i'm going to ask
+      i don't know what to do
     </h1>
     <h2>name</h2>
     <script src="index.js"></script>
