--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       i don't know what to do
       i'm tired fr fr
       need to get data today
+      omor 😭
     </h1>
     <h2>name</h2>
     <script src="index.js"></script>
