--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       😭😭😭😭😭
       pushing in a hurry 
       no strength
+      no data
     </h1>
     <h2>name</h2>
     <script src="index.js"></script>
